# open.mp-sdk

./: .gitmodules  CMakeLists.txt  README.md  flake.nix
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: anim.hpp  bitstream.hpp  component.hpp  core.hpp  entity.hpp  events.hpp  gtaquat.hpp  map-zones.hpp  network.hpp  player.hpp  pool.hpp  sdk.hpp  types.hpp  values.hpp
include/Impl/: entity_impl.hpp  events_impl.hpp  network_impl.hpp  pool_impl.hpp
include/Impl/Utils/: helpers.hpp  singleton.hpp
include/Server/Components/Actors/: actors.hpp
include/Server/Components/Checkpoints/: checkpoints.hpp
include/Server/Components/Classes/: classes.hpp
include/Server/Components/Console/: console.hpp
include/Server/Components/Databases/: databases.hpp
include/Server/Components/Dialogs/: dialogs.hpp
include/Server/Components/GangZones/: gangzones.hpp
include/Server/Components/Menus/: menus.hpp
include/Server/Components/NPCs/: npcs.hpp
include/Server/Components/Objects/: objects.hpp
include/Server/Components/Pawn/: pawn.hpp
include/Server/Components/Pickups/: pickups.hpp
include/Server/Components/TextDraws/: textdraws.hpp
include/Server/Components/TextLabels/: textlabels.hpp
include/Server/Components/Timers/: timers.hpp
include/Server/Components/Unicode/: unicode.hpp
include/Server/Components/Variables/: variables.hpp
include/Server/Components/Vehicles/: vehicle_colours.hpp  vehicle_components.hpp  vehicle_models.hpp  vehicles.hpp
include/Server/Components/Vehicles/Impl/: vehicle_models.hpp
lib/: omp-server.lib
nix/: robin-hood-hashing.nix  span-lite.nix  string-view-lite.nix
